# zuko

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.bib  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pre-commit.yml  pyproject.toml  readthedocs.yaml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_extra.py
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: ci.yaml  ci.yml  dummy.yaml  lint.yml  pre-commit.yml  push.yml  test.yml  tests.yml
backfire/: __init__.py  distributions.py  flows.py  nn.py  transforms.py
benchmark/: launch_2d.py  launch_uci.py
docs/: api.rst  conf.py  index.rst  requirements.txt  tutorials.rst
docs/static/: custom.css
docs/templates/autosummary/: module.rst
docs/tutorials/: basics.ipynb  bayesian_flows.ipynb  forward_kl.ipynb  reverse_kl.ipynb  vae.ipynb
sphinx/: build.sh  conf.py  index.rst  requirements.txt
sphinx/api/: distributions.rst  flows.rst  index.rst  nn.rst  transforms.rst  utils.rst
sphinx/static/: custom.css
tests/: conftest.py  test_bayesian.py  test_distributions.py  test_flows.py  test_gmm.py  test_mixtures.py  test_nn.py  test_transforms.py  test_utils.py
zuko/: __init__.py  bayesian.py  conftest.py  distributions.py  flows.py  lazy.py  mixtures.py  nn.py  transforms.py  utils.py
zuko/flows/: __init__.py  augmented.py  autoregressive.py  continuous.py  core.py  coupling.py  gaussianization.py  mixture.py  neural.py  polynomial.py  special.py  spline.py
