[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zuko"
description = "Normalizing flows in PyTorch"
authors = [
  {name = "The Probabilists", email = "theprobabilists@gmail.com"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "version"]
keywords = [
  "torch",
  "normalizing flows",
  "probability",
  "distribution",
  "generative",
  "deep learning",
]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "ruff",
]

[project.urls]
documentation = "https://zuko.readthedocs.io"
source = "https://github.com/probabilists/zuko"
tracker = "https://github.com/probabilists/zuko/issues"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99

[tool.ruff.lint]
extend-select = ["B", "I", "RUF022", "W"]
ignore = ["E731", "E741"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"test_*.py" = ["F403", "F405"]
"*.ipynb" = ["B007"]

[tool.ruff.lint.isort]
lines-between-types = 1
no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.format]
preview = true
quote-style = "preserve"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "zuko.__version__"}

[tool.setuptools.packages.find]
include = ["zuko*"]
