[metadata]
name = zuko
version = attr: zuko.__version__
description = Normalizing flows in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    torch
    normalizing flows
    probability
    density
    generative
    deep learning
author = François Rozet
author_email = francois.rozet@outlook.com
project_urls =
    Documentation = https://zuko.readthedocs.io
    Source = https://github.com/francois-rozet/zuko
    Tracker = https://github.com/francois-rozet/zuko/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
